# spec0-action

./: .gitignore  .pre-commit-config.yaml  action.yaml  generate_schedule.py  pyproject.toml  readme.md  run_spec0_update.py  schedule.json  spec0_versions.py  update.py
.github/: dependabot.yml
.github/workflows/: release_schedule.yaml  test.yaml  test_action.yaml  test_bench.yml  update_schedule.yml
spec0_action/: __init__.py  parsing.py  versions.py
tests/: test_parsing.py  test_update_pyproject_toml.py  test_versions.py
tests/test_data/: pyproject.toml  pyproject_pixi.toml  pyproject_pixi_updated.toml  pyproject_updated.toml  test_schedule.json
