[project]
authors         = [{ name = "Sam Vente", email = "savente93@proton.me" }]
name            = "spec0-action"
requires-python = ">= 3.11"
version         = "0.1.0"
dependencies    = ["packaging>=25.0,<26"]


[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.pixi.workspace]
channels  = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.feature.update.pypi-dependencies]
spec0-action = { path = ".", editable = true }

[tool.pixi.feature.test.tasks]
test = { cmd = ["pytest", "-vvv"] }

[tool.pixi.feature.schedule.tasks]
generate-schedule = { cmd = ["python", "generate_schedule.py"] }

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.update.dependencies]
tomlkit = ">=0.13.3,<0.14"

[tool.pixi.feature.schedule.dependencies]
pandas   = "*"
requests = "*"

[tool.pixi.environments]
dev      = ["test", "schedule", "update"]
schedule = ["schedule"]
update   = ["update"]
