[project]
authors 	= [{ name = "Scientific Python Developers" }]
name            = "spec0-action"
description     = "Python code to update the lower bounds of Scientific Python libraries according to SPEC 0"
requires-python = ">= 3.11"
version         = "1.0.0"
dependencies    = ["packaging>=25.0", "pandas>=2.3.3", "requests>=2.32.5,<3"]

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.pixi.workspace]
channels  = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
spec0-action= { path = ".", editable = true }
tomlkit                   = ">=0.13.3,<0.14"

[tool.pixi.tasks]
update-dependencies = { cmd = ["python", "run_spec0_update.py"] }
generate-schedule = { cmd = ["python", "spec0_versions.py"] }

[tool.pixi.feature.test.tasks]
test = { cmd = ["pytest", "-vvv"] }

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.environments]
test = ["test"]

