[project]
authors         = [{ name = "Sam Vente", email = "savente93@proton.me" }]
name            = "tests"
requires-python = ">=3.10"
version         = "0.1.0"
dependencies    = ["ipython>=8.7.0,<4", "numpy[foo,bar]>=1.10.0,<2"]

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.pixi.workspace]
channels  = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
tests        = { path = ".", editable = true }
scikit-learn = ">=1.2.0"

[tool.pixi.tasks]

[tool.pixi.feature.foo.dependencies]
xarray = "*"

[tool.pixi.environments]
bar = ["foo"]

[tool.pixi.dependencies]
numpy = ">=1.10.0,<2"
