[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "setuptools_test"
version         = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  'pandas>=1.0.0,<3',
  'xarray>=2021.1.0',
  "ipython>=8.7.0",
  "numpy[foo,bar]>=1.10.0",
  "scikit-learn>1.3,<1.5;sys_platform=='win32'",
  "scikit-learn>1.2;sys_platform!='win32'"
]
